cabal-version:   3.0
name:            brushsom
version:         0.1.0.0

-- synopsis:
-- description:
license:         Apache-2.0
license-file:    LICENSE
author:          Mirek Kratochvil
maintainer:      exa.exa@gmail.com

-- copyright:
category:        Graphics
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

executable brushsom
  import:           warnings
  main-is:          Main.hs
  other-modules:    Lensref

  -- other-extensions:
  build-depends:
    , base
    , containers
    , dear-imgui
    , gloss
    , gloss-rendering
    , microlens
    , microlens-th
    , OpenGLRaw
    , sdl2
    , vector

  hs-source-dirs:   app
  default-language: Haskell2010
