cabal-version:   3.0
name:            clusterpainter
version:         0.1.0.0

-- synopsis:
-- description:
license:         Apache-2.0
license-file:    LICENSE
author:          Mirek Kratochvil
maintainer:      exa.exa@gmail.com

-- copyright:
category:        Graphics
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

executable clusterpainter
  main-is:          Main.hs
  other-modules:
    Config
    Lensref
    St
    Ui

  autogen-modules:  Paths_clusterpainter
  other-modules:    Paths_clusterpainter
  build-depends:
    , aeson
    , base
    , containers
    , dear-imgui
    , lens
    , gl
    , optparse-applicative
    , sdl2
    , vector

  hs-source-dirs:   app
  ghc-options:      -Wall
  default-language: Haskell2010
